src/app/pages/home/home.component.scss
@import "../../../styles.scss";

#homeSection {
    height: 100%;
    min-height: 86vh;
    .detailsSection {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-basis: 50%;
        padding: 3.2rem;
    }

    #name {
        font-size: 3rem;
        margin-bottom: unset;
    }

    #descriptionDetails {
        flex-direction: column;
        align-items: unset;
    }

    #avatarImage {
        width: 13.125rem;
    }
}

#skillSection {
    flex-direction: column;
    margin-bottom: 5rem;
    #skillSVG {
        height: 90vh;
        display: flex;
        justify-content: center;
        background-color: $color5;
        img {
            width: 30em;
            margin-top: 10em;
        }
    }
    #skillDetails {
        display: flex;
        margin: -14rem 5rem 0 5rem;
        height: 100%;

        background-color: $color1;
        border-radius: 25px;
        box-shadow: 0 5px 5px 0 $color4, 0 0 0 1px $color4;

        .column {
            display: flex;
            flex-direction: column;
            align-items: center;
            flex-basis: 50%;

            padding: 5em 2em;
            border-right: 1px solid $color4;

            img {
                max-height: 5em;
            }

            .skillIntroduction {
                text-align: center;
            }

            &:last-child {
                border-right: none;
                border-bottom: none;
            }

            ul {
                list-style: none;
                padding: unset;
            }
        }
    }
}

#companySection {
    flex-direction: column;
    align-items: center;
    margin-bottom: 5rem;

    #companyList {
        display: flex;
        justify-content: center;
        margin-top: 5rem;

        .companyLogo {
            flex-grow: 1;
            flex-basis: 50%;
            height: 5rem;
            margin: 0 1rem;
        }
    }
}

@include respond-to(small-only, medium-only) {
    #homeSection {
        flex-wrap: wrap;
        .detailsSection {
            flex-basis: 100%;
        }

        #nameDetails {
            flex-wrap: wrap;
            #avatarImage {
                width: 8.125rem;
            }
            #name {
                font-size: 1.8rem;
            }
        }
    }

    #skillSection {
        #skillSVG {
            img {
                width: 20em;
            }
        }
        #skillDetails {
            margin: -14rem 1rem 0 1rem;
            flex-direction: column;
        }
        .column {
            border-bottom: 1px solid $color4;
        }
    }

    #companySection {
        #companyList {
            flex-direction: column;
            margin-top: 5rem;

            .companyLogo {
                height: 2rem;
                margin: 2rem 0;
            }
        }
    }
}

